--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>首页</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
+  <button (click)="test()">click me </button>
+  <button (click)="testAddData()">testAddData</button>
+  <button (click)="testGetData()">testGetData</button>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
